--- a/Examples/Examples.csproj
+++ b/Examples/Examples.csproj
@@ -58,10 +58,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DAO\DataSet.Designer.cs">
+    <Compile Include="Database\daoDataSet.cs">
+      <DependentUpon>daoDataSet.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="Database\daoDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>DataSet.xsd</DependentUpon>
+      <DependentUpon>daoDataSet.xsd</DependentUpon>
     </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
@@ -84,16 +87,16 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <None Include="app.config" />
-    <None Include="DAO\DataSet.xsc">
-      <DependentUpon>DataSet.xsd</DependentUpon>
+    <None Include="Database\daoDataSet.xsc">
+      <DependentUpon>daoDataSet.xsd</DependentUpon>
     </None>
-    <None Include="DAO\DataSet.xsd">
+    <None Include="Database\daoDataSet.xsd">
       <SubType>Designer</SubType>
       <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>DataSet.Designer.cs</LastGenOutput>
+      <LastGenOutput>daoDataSet.Designer.cs</LastGenOutput>
     </None>
-    <None Include="DAO\DataSet.xss">
-      <DependentUpon>DataSet.xsd</DependentUpon>
+    <None Include="Database\daoDataSet.xss">
+      <DependentUpon>daoDataSet.xsd</DependentUpon>
     </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
