Drawing for DataGridView has been arranged in folders

--- a/Source/DataViewExtenders.csproj
+++ b/Source/DataViewExtenders.csproj
@@ -45,7 +45,8 @@
     <Compile Include="DataDescriptors\ColumnDescriptor.cs" />
     <Compile Include="DataDescriptors\FieldDescriptor.cs" />
     <Compile Include="DataDescriptors\FieldGroupDescriptor.cs" />
-    <Compile Include="DataGridViewExtenders.cs" />
+    <Compile Include="DataGridViewExtenders\Drawing.cs" />
+    <Compile Include="DataGridViewExtenders\AddColumns.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
