--- a/Source/DataViewExtenders.csproj
+++ b/Source/DataViewExtenders.csproj
@@ -50,6 +50,13 @@
     <Compile Include="DataGridViewExtenders\ColumnStyles.cs" />
     <Compile Include="DataGridViewExtenders\Drawing.cs" />
     <Compile Include="DataGridViewExtenders\AddColumns.cs" />
+    <Compile Include="DataPanelViewExtenders\EditorPanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Forms\BitMaskCheckedListBox.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Forms\FormServices.cs" />
     <Compile Include="Forms\PromptedTextBox.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -59,11 +66,21 @@
     </Compile>
     <Compile Include="Forms\SortableBindingList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
