--- a/Source/DataViewExtenders.csproj
+++ b/Source/DataViewExtenders.csproj
@@ -47,15 +47,12 @@
     <Compile Include="Extenders\DataGridView\Drawing.cs" />
     <Compile Include="Extenders\DataGridView\ColumnsGenerator.cs" />
     <Compile Include="Extenders\FlowLayoutPanel\GroupsGenerator.cs" />
-    <Compile Include="Extenders\UserControls\EditorPanel.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
     <Compile Include="Extenders\TableLayoutPanel\FieldsGenerator.cs" />
     <Compile Include="Forms\BitMaskCheckedListBox.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Forms\FormServices.cs" />
-    <Compile Include="Extenders\TableLayoutPanel\EditorTableLayoutPanel.cs">
+    <Compile Include="Extenders\TableLayoutPanel\HeaderTableLayoutPanel.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Forms\PromptedTextBox.cs">
@@ -79,6 +76,7 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
