--- a/Source/DataViewExtenders.csproj
+++ b/Source/DataViewExtenders.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Extenders\DataGridView\Drawing.cs" />
     <Compile Include="Extenders\DataGridView\ColumnsGenerator.cs" />
     <Compile Include="Extenders\FlowLayoutPanel\GroupsGenerator.cs" />
+    <Compile Include="Extenders\Settings.cs" />
     <Compile Include="Extenders\TableLayoutPanel\FieldsGenerator.cs" />
     <Compile Include="Forms\BitMaskCheckedListBox.cs">
       <SubType>Component</SubType>
@@ -76,7 +77,6 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
